Add the ldd-check test to several packages

--- a/proj.yaml
+++ b/proj.yaml
@@ -2,7 +2,7 @@
 package:
   name: proj
   version: 9.5.1
-  epoch: 1
+  epoch: 2
   description: PROJ coordinate transformation software library
   copyright:
     - license: MIT
@@ -70,6 +70,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: proj-dev
 
 update:
   enabled: true
