--- a/prometheus-cpp.yaml
+++ b/prometheus-cpp.yaml
@@ -1,7 +1,7 @@
 package:
   name: prometheus-cpp
   version: "1.3.0"
-  epoch: 0
+  epoch: 1
   description: Prometheus client libraries (C++)
   copyright:
     - license: MIT
@@ -71,6 +71,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: prometheus-cpp-dev
 
 update:
   enabled: true
