--- a/prrte.yaml
+++ b/prrte.yaml
@@ -1,7 +1,7 @@
 package:
   name: prrte
   version: 3.0.8
-  epoch: 0
+  epoch: 1
   description: PMIx Reference RunTime Environment (PRRTE)
   copyright:
     - license: BSD-3-Clause-Open-MPI
@@ -60,6 +60,11 @@ subpackages:
       runtime:
         - ${{package.name}}
     description: prrte dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: prrte-dev
 
   - name: prrte-doc
     description: prrte manpages
