--- a/rtmpdump.yaml
+++ b/rtmpdump.yaml
@@ -2,7 +2,7 @@
 package:
   name: rtmpdump
   version: "2.6_git20250307"
-  epoch: 0
+  epoch: 1
   description: rtmpdump is a toolkit for RTMP streams
   copyright:
     - license: LGPL-2.0-only
@@ -50,6 +50,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: rtmpdump-dev
 
   - name: ${{package.name}}-doc
     description: ${{package.name}} documentation
