--- a/procps.yaml
+++ b/procps.yaml
@@ -1,7 +1,7 @@
 package:
   name: procps
   version: 4.0.5
-  epoch: 0
+  epoch: 1
   description: "utilities for monitor processes on a system"
   copyright:
     - license: GPL-2.0-or-later AND LGPL-2.1-or-later
@@ -57,6 +57,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: procps-dev
 
   - name: "libproc-2-0"
     description: "libproc runtime"
