--- a/protobuf.yaml
+++ b/protobuf.yaml
@@ -1,7 +1,7 @@
 package:
   name: protobuf
   version: 3.29.3 # On update, please check if -fdelete-null-pointer-checks is still required
-  epoch: 1
+  epoch: 2
   description: Library for extensible, efficient structure packing
   copyright:
     - license: BSD-3-Clause
@@ -77,6 +77,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: protobuf-dev
 
   - name: protoc
     description: Protocol buffer compiler binary and library
