--- a/qpdf.yaml
+++ b/qpdf.yaml
@@ -1,7 +1,7 @@
 package:
   name: qpdf
   version: "11.10.1"
-  epoch: 0
+  epoch: 1
   description: Command-line tools and library for transforming PDF files
   copyright:
     - license: Apache-2.0
@@ -56,6 +56,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: qpdf-dev
 
   - name: qpdf-doc
     pipeline:
