--- a/qt5-qtbase.yaml
+++ b/qt5-qtbase.yaml
@@ -2,7 +2,7 @@
 package:
   name: qt5-qtbase
   version: 5.15.16
-  epoch: 1
+  epoch: 2
   description: Qt5 - QtBase components
   copyright:
     - license: LGPL-3.0-only OR GPL-3.0-only WITH Qt-GPL-exception-1.0
@@ -194,6 +194,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: qt5-qtbase-dev
 
   - name: qt5-qtbase-doc
     pipeline:
