--- a/re2.yaml
+++ b/re2.yaml
@@ -1,7 +1,7 @@
 package:
   name: re2
   version: "2024.02.01" # On update, please check if -fdelete-null-pointer-checks is still required
-  epoch: 4
+  epoch: 5
   description: Efficient, principled regular expression library
   copyright:
     - license: BSD-3-Clause
@@ -58,6 +58,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: re2-dev
 
 update:
   enabled: true
