--- a/selenium.yaml
+++ b/selenium.yaml
@@ -5,6 +5,8 @@ package:
   description: A browser automation framework and ecosystem.
   copyright:
     - license: Apache-2.0
+  target-architecture:
+    - x86_64
   dependencies:
     runtime:
       - openjdk-${{vars.java-version}}-default-jvm
