Add the ldd-check to postgresql-17

--- a/postgresql-17.yaml
+++ b/postgresql-17.yaml
@@ -1,7 +1,7 @@
 package:
   name: postgresql-17
   version: "17.4"
-  epoch: 0
+  epoch: 1
   description: A sophisticated object-relational DBMS
   copyright:
     - license: BSD-3-Clause
@@ -104,6 +104,11 @@ subpackages:
         - ${{package.name}}-client
         - libpq-17
     description: postgresql dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: postgresql-17-dev
 
   - name: ${{package.name}}-client-base
     description: PostgreSQL client base
