--- a/oniguruma.yaml
+++ b/oniguruma.yaml
@@ -1,7 +1,7 @@
 package:
   name: oniguruma
   version: 6.9.10
-  epoch: 0
+  epoch: 1
   description: "a regular expressions library"
   copyright:
     - license: BSD-2-Clause
@@ -51,6 +51,9 @@ subpackages:
         - runs: |
             onig-config --version
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: oniguruma-dev
 
 update:
   enabled: true
