Add the ldd-check test to multiple ruby packages

--- a/ruby-3.1.yaml
+++ b/ruby-3.1.yaml
@@ -1,7 +1,7 @@
 package:
   name: ruby-3.1
   version: 3.1.6
-  epoch: 12
+  epoch: 13
   description: "the Ruby programming language"
   copyright:
     - license: Ruby
@@ -123,6 +123,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ruby-3.1-dev
 
 update:
   enabled: true
