--- a/ruby-3.4.yaml
+++ b/ruby-3.4.yaml
@@ -1,7 +1,7 @@
 package:
   name: ruby-3.4
   version: "3.4.2"
-  epoch: 1
+  epoch: 2
   description: "the Ruby programming language"
   copyright:
     - license: Ruby
@@ -143,6 +143,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ruby-3.4-dev
 
 update:
   enabled: true
