--- a/ruby-3.0.yaml
+++ b/ruby-3.0.yaml
@@ -1,7 +1,7 @@
 package:
   name: ruby-3.0
   version: 3.0.7
-  epoch: 5
+  epoch: 6
   description: "the Ruby programming language"
   copyright:
     - license: Ruby
@@ -110,6 +110,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ruby-3.0-dev
 
 update:
   enabled: false
