Add the ldd-check test to several packages

--- a/s6.yaml
+++ b/s6.yaml
@@ -1,7 +1,7 @@
 package:
   name: s6
   version: 2.13.1.0
-  epoch: 30
+  epoch: 31
   description: "skarnet.org's small & secure supervision software suite."
   copyright:
     - license: ISC
@@ -61,6 +61,11 @@ subpackages:
       runtime:
         - merged-bin
         - wolfi-baselayout
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: s6-dev
 
   - name: "s6-ipcserver"
     description: "s6 ipcserver"
