--- a/shadow.yaml
+++ b/shadow.yaml
@@ -2,7 +2,7 @@
 package:
   name: shadow
   version: "4.17.3"
-  epoch: 30
+  epoch: 31
   description: PAM login and passwd utilities
   copyright:
     - license: BSD-3-Clause
@@ -108,6 +108,11 @@ subpackages:
         - shadow
         - wolfi-baselayout
     description: shadow dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: shadow-dev
 
   - name: shadow-login
     pipeline:
