--- a/talloc.yaml
+++ b/talloc.yaml
@@ -1,7 +1,7 @@
 package:
   name: talloc
   version: "2.4.3"
-  epoch: 1
+  epoch: 2
   description: Memory pool management library
   copyright:
     - license: GPL-3.0-or-later
@@ -68,6 +68,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: talloc-dev
 
   - name: "talloc-doc"
     description: "talloc documentation"
