--- a/tinyxml2.yaml
+++ b/tinyxml2.yaml
@@ -2,7 +2,7 @@
 package:
   name: tinyxml2
   version: 10.0.0
-  epoch: 2
+  epoch: 3
   description: Simple, small and efficient C++ XML parser
   copyright:
     - license: Zlib
@@ -43,6 +43,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: tinyxml2-dev
 
 update:
   enabled: true
