--- a/speex.yaml
+++ b/speex.yaml
@@ -2,7 +2,7 @@
 package:
   name: speex
   version: 1.2.1
-  epoch: 2
+  epoch: 3
   description: an audio compression format designed for speech
   copyright:
     - license: BSD-3-Clause
@@ -51,6 +51,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: speex-dev
 
   - name: speex-doc
     pipeline:
