--- a/sqlite.yaml
+++ b/sqlite.yaml
@@ -1,7 +1,7 @@
 package:
   name: sqlite
   version: "3.49.1"
-  epoch: 0
+  epoch: 1
   description: "C library which implements an SQL database engine"
   copyright:
     - license: blessing
@@ -74,6 +74,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: sqlite-dev
 
   - name: "sqlite-doc"
     description: "sqlite documentation"
