--- a/subversion.yaml
+++ b/subversion.yaml
@@ -1,7 +1,7 @@
 package:
   name: subversion
   version: 1.14.5
-  epoch: 1
+  epoch: 2
   description: Replacement for CVS, another versioning system (svn)
   copyright:
     - license: Apache-2.0 AND BSD-2-Clause AND BSD-3-Clause AND HPND-Markus-Kuhn AND MIT AND Unicode-DFS-2015 AND FSFAP
@@ -53,6 +53,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: subversion-dev
 
   - name: subversion-doc
     pipeline:
