--- a/svt-av1.yaml
+++ b/svt-av1.yaml
@@ -1,7 +1,7 @@
 package:
   name: svt-av1
   version: "3.0.0"
-  epoch: 0
+  epoch: 1
   description: "Scalable Video Technology for AV1 (SVT-AV1 Encoder)"
   copyright:
     - license: BSD-2-Clause
@@ -46,6 +46,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: svt-av1-dev
 
 update:
   enabled: true
