--- a/tevent.yaml
+++ b/tevent.yaml
@@ -1,7 +1,7 @@
 package:
   name: tevent
   version: "0.16.2"
-  epoch: 2
+  epoch: 3
   description: The tevent library
   copyright:
     - license: LGPL-3.0-or-later
@@ -64,6 +64,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: tevent-dev
 
   - range: py-versions
     name: py${{range.key}}-${{vars.pypi-package}}
