--- a/thrift.yaml
+++ b/thrift.yaml
@@ -1,7 +1,7 @@
 package:
   name: thrift
   version: 0.21.0
-  epoch: 2
+  epoch: 3
   description: "Language-independent software stack for RPC implementation"
   copyright:
     - license: "Apache-2.0"
@@ -98,6 +98,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: thrift-dev
 
   - name: "libthrift"
     description: "Language-independent software stack for RPC implementation (libthrift library)"
