--- a/tiff.yaml
+++ b/tiff.yaml
@@ -1,7 +1,7 @@
 package:
   name: tiff
   version: 4.7.0
-  epoch: 2
+  epoch: 3
   description: Provides support for the Tag Image File Format or TIFF
   copyright:
     - license: libtiff
@@ -67,6 +67,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: tiff-dev
 
 update:
   enabled: true
