--- a/tree-sitter.yaml
+++ b/tree-sitter.yaml
@@ -1,7 +1,7 @@
 package:
   name: tree-sitter
   version: "0.25.3"
-  epoch: 0
+  epoch: 1
   description: "Incremental parsing system for programming tools"
   copyright:
     - license: MIT
@@ -37,6 +37,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: tree-sitter-dev
 
 update:
   enabled: true
