glib-gir: depend on gobject-introspection-bin
The binaries were recently split out of gobject-introspection itself.

--- a/glib-gir.yaml
+++ b/glib-gir.yaml
@@ -73,7 +73,7 @@ test:
   environment:
     contents:
       packages:
-        - gobject-introspection
+        - gobject-introspection-bin
   pipeline:
     - name: List shared libraries
       runs: g-ir-inspect --print-shlibs Gio
