Add the ldd-check test to several packages

--- a/util-linux.yaml
+++ b/util-linux.yaml
@@ -1,7 +1,7 @@
 package:
   name: util-linux
   version: "2.40.4"
-  epoch: 30
+  epoch: 31
   description: Random collection of Linux utilities
   copyright:
     - license: |-
@@ -112,6 +112,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: util-linux-dev
 
   - name: util-linux-doc
     pipeline:
