--- a/zfs.yaml
+++ b/zfs.yaml
@@ -2,7 +2,7 @@
 package:
   name: zfs
   version: "2.3.0"
-  epoch: 20
+  epoch: 21
   description: Advanced filesystem and volume manager
   copyright:
     - license: CDDL-1.0
@@ -73,6 +73,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: zfs-dev
     dependencies:
       runtime:
         - merged-sbin
