--- a/zstd.yaml
+++ b/zstd.yaml
@@ -1,7 +1,7 @@
 package:
   name: zstd
   version: "1.5.7"
-  epoch: 0
+  epoch: 1
   description: "the Zstandard compression algorithm"
   copyright:
     - license: BSD-2-Clause AND GPL-2.0-only
@@ -60,6 +60,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: zstd-dev
 
   - name: "libzstd1"
     description: "libzstd runtime libraries"
