--- a/unibilium.yaml
+++ b/unibilium.yaml
@@ -1,7 +1,7 @@
 package:
   name: unibilium
   version: 2.1.2
-  epoch: 3
+  epoch: 4
   description: "Terminfo parsing library"
   copyright:
     - license: LGPL-3.0-or-later
@@ -37,6 +37,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: unibilium-dev
 
   - name: unibilium-doc
     description: unibilium docs
