--- a/userspace-rcu.yaml
+++ b/userspace-rcu.yaml
@@ -1,7 +1,7 @@
 package:
   name: userspace-rcu
   version: "0.15.1"
-  epoch: 0
+  epoch: 1
   description: Userspace RCU (read-copy-update) library
   copyright:
     - license: LGPL-2.1-or-later
@@ -48,6 +48,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: userspace-rcu-dev
 
 update:
   enabled: true
