--- a/utf8proc.yaml
+++ b/utf8proc.yaml
@@ -2,7 +2,7 @@
 package:
   name: utf8proc
   version: 2.10.0
-  epoch: 0
+  epoch: 1
   description: Clean C library for processing UTF-8 Unicode data
   copyright:
     - license: MIT AND Unicode-TOU
@@ -40,6 +40,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: utf8proc-dev
 
 update:
   enabled: true
