--- a/utmps.yaml
+++ b/utmps.yaml
@@ -1,7 +1,7 @@
 package:
   name: utmps
   version: 0.1.2.3
-  epoch: 20
+  epoch: 21
   description: A secure utmp/wtmp implementation
   copyright:
     - license: ISC
@@ -67,6 +67,11 @@ subpackages:
         - utmps
         - wolfi-baselayout
     description: utmps dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: utmps-dev
 
   - name: utmps-docs
     pipeline:
