--- a/wasi-sdk.yaml
+++ b/wasi-sdk.yaml
@@ -1,7 +1,7 @@
 package:
   name: wasi-sdk
   version: "25"
-  epoch: 0
+  epoch: 1
   description: "WASI-enabled WebAssembly C/C++ toolchain"
   copyright:
     - license: Apache-2.0
@@ -95,6 +95,9 @@ subpackages:
         - runs: |
             llvm-config --version
             llvm-config --help
+        - uses: test/tw/ldd-check
+          with:
+            packages: wasi-sdk-dev
 
 update:
   enabled: true
