--- a/x265.yaml
+++ b/x265.yaml
@@ -1,7 +1,7 @@
 package:
   name: x265
   version: "4.1"
-  epoch: 1
+  epoch: 2
   description: H.265/HEVC encoder
   copyright:
     - license: GPL-2.0-only
@@ -84,6 +84,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: x265-dev
 
 update:
   enabled: true
