--- a/zlib.yaml
+++ b/zlib.yaml
@@ -1,7 +1,7 @@
 package:
   name: zlib
   version: 1.3.1
-  epoch: 5
+  epoch: 6
   description: "a library implementing the zlib compression algorithms"
   copyright:
     - license: MPL-2.0 AND MIT
@@ -88,6 +88,9 @@ subpackages:
               exit 1
             fi
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: zlib-dev
 
   - name: "minizip"
     description: "a library for manipulation with files from .zip archives"
