add a test/headers pipeline and a handful of working examples

--- a/tinydir.yaml
+++ b/tinydir.yaml
@@ -1,7 +1,7 @@
 package:
   name: tinydir
   version: 1.2.6
-  epoch: 0
+  epoch: 1
   description: "Lightweight, portable C library that simplifies interaction with directories and files in a filesystem"
   copyright:
     - license: "BSD-2-Clause"
@@ -30,3 +30,7 @@ update:
   enabled: true
   github:
     identifier: cxong/tinydir
+
+test:
+  pipeline:
+    - uses: test/headers
