--- a/tinyxml.yaml
+++ b/tinyxml.yaml
@@ -2,7 +2,7 @@
 package:
   name: tinyxml
   version: 2.6.2
-  epoch: 1
+  epoch: 2
   description: A simple, small, C++ XML parser
   copyright:
     - license: Zlib
@@ -56,6 +56,9 @@ subpackages:
     pipeline:
       - uses: split/dev
     description: tinyxml dev
+    test:
+      pipeline:
+        - uses: test/headers
 
 update:
   enabled: true
