--- a/tl-expected.yaml
+++ b/tl-expected.yaml
@@ -1,7 +1,7 @@
 package:
   name: tl-expected
   version: 1.1.0
-  epoch: 1
+  epoch: 2
   description: C++11/14/17 std::expected with functional-style extensions
   copyright:
     - license: CC0-1.0
@@ -40,3 +40,7 @@ update:
     identifier: TartanLlama/expected
     strip-prefix: v
     tag-filter: v
+
+test:
+  pipeline:
+    - uses: test/headers
