--- a/uthash.yaml
+++ b/uthash.yaml
@@ -1,7 +1,7 @@
 package:
   name: uthash
   version: "2.3.0"
-  epoch: 0
+  epoch: 1
   description: "Header file for providing hash table for C structures"
   copyright:
     - license: "BSD-2-Clause"
@@ -32,3 +32,7 @@ update:
     identifier: troydhanson/uthash
     strip-prefix: v
     use-tag: true
+
+test:
+  pipeline:
+    - uses: test/headers
