--- a/libb64-1.2.yaml
+++ b/libb64-1.2.yaml
@@ -1,7 +1,7 @@
 package:
   name: libb64-1.2
   version: 1.2.1
-  epoch: 0
+  epoch: 1
   description: Fast Base64 encoding/decoding routines
   dependencies:
     provides:
@@ -23,6 +23,10 @@ pipeline:
       expected-commit: "c1e3323498e1b5512e509716c5720029853846bc"
       repository: https://github.com/libb64/libb64
       tag: v${{package.version}}
+
+  - uses: patch
+    with:
+      patches: bufsiz.patch
 
   - runs: |
       # Remove CFLAGS to use wolfi defaults.
@@ -50,3 +54,7 @@ update:
     identifier: libb64/libb64
     strip-prefix: v
     tag-filter: v1.2.
+
+test:
+  pipeline:
+    - uses: test/headers
