--- a/poppler.yaml
+++ b/poppler.yaml
@@ -1,7 +1,7 @@
 package:
   name: poppler
   version: "25.03.0"
-  epoch: 0
+  epoch: 1
   description: Poppler is a PDF rendering library based on the xpdf-3.0 code base.
   copyright:
     - license: GPL-2.0-or-later
@@ -69,11 +69,18 @@ pipeline:
 
 subpackages:
   - name: poppler-dev
+    dependencies:
+      runtime:
+        - libnss-dev
+        - libnspr-dev
     pipeline:
       - uses: split/dev
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: poppler-dev
 
   - name: poppler-doc
     pipeline:
