Add ldd-check test to several packages

--- a/gdal.yaml
+++ b/gdal.yaml
@@ -1,7 +1,7 @@
 package:
   name: gdal
   version: "3.10.2"
-  epoch: 0
+  epoch: 1
   description: GDAL is an open source MIT licensed translator library for raster and vector geospatial data formats.
   copyright:
     - license: MIT
@@ -113,6 +113,9 @@ subpackages:
       pipeline:
         - runs: gdal-config --version
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - range: py-versions
     name: py${{range.key}}-gdal
