--- a/geos-3.13.yaml
+++ b/geos-3.13.yaml
@@ -1,7 +1,7 @@
 package:
   name: geos-3.13
   version: "3.13.1"
-  epoch: 0
+  epoch: 1
   description: GEOS is a library providing OpenGIS and JTS spatial operations in C++.
   copyright:
     - license: LGPL-2.1-or-later
@@ -52,6 +52,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
 update:
   enabled: true
