--- a/clang-15.yaml
+++ b/clang-15.yaml
@@ -1,7 +1,7 @@
 package:
   name: clang-15
   version: 15.0.7
-  epoch: 5
+  epoch: 6
   description: "C language family frontend for LLVM"
   copyright:
     - license: Apache-2.0
@@ -126,6 +126,11 @@ subpackages:
       runtime:
         - libLLVM-15
         - libclang-cpp-15
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - name: "libclang-cpp-15"
     description: "Clang 15 runtime library"
