--- a/double-conversion.yaml
+++ b/double-conversion.yaml
@@ -1,7 +1,7 @@
 package:
   name: double-conversion
   version: "3.3.1"
-  epoch: 0
+  epoch: 1
   description: "Efficient binary-decimal and decimal-binary conversion routines for IEEE doubles"
   copyright:
     - license: BSD-3-Clause
@@ -34,6 +34,11 @@ subpackages:
     description: "Efficient binary-decimal and decimal-binary conversion routines for IEEE doubles - development headers"
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
 test:
   environment:
