--- a/execline.yaml
+++ b/execline.yaml
@@ -1,7 +1,7 @@
 package:
   name: execline
   version: 2.9.6.1
-  epoch: 30
+  epoch: 31
   description: "a small scripting language intended to be an alternative to shell scripting"
   copyright:
     - license: ISC
@@ -51,6 +51,11 @@ subpackages:
       runtime:
         - merged-bin
         - wolfi-baselayout
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
 update:
   enabled: true
