--- a/graphviz.yaml
+++ b/graphviz.yaml
@@ -1,7 +1,7 @@
 package:
   name: graphviz
   version: 12.2.1
-  epoch: 0
+  epoch: 1
   description: Graph Visualization Tools
   copyright:
     - license: EPL-1.0
@@ -111,6 +111,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - name: graphviz-doc
     pipeline:
