--- a/grpc-1.70.yaml
+++ b/grpc-1.70.yaml
@@ -1,7 +1,7 @@
 package:
   name: grpc-1.70
   version: "1.70.1"
-  epoch: 0
+  epoch: 1
   description: The C based gRPC
   copyright:
     - license: Apache-2.0 AND BSD-3-Clause AND MIT
@@ -154,6 +154,11 @@ subpackages:
       provides:
         - grpc-dev=${{package.full-version}}
     description: grpc dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
 update:
   enabled: true
