--- a/gst-plugins-bad.yaml
+++ b/gst-plugins-bad.yaml
@@ -1,7 +1,7 @@
 package:
   name: gst-plugins-bad
   version: "1.25.1"
-  epoch: 2
+  epoch: 3
   description: GStreamer streaming media framework bad plug-ins
   copyright:
     - license: GPL-2.0-or-later AND LGPL-2.0-or-later
@@ -75,6 +75,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - name: ${{package.name}}-doc
     pipeline:
