--- a/fluent-operator.yaml
+++ b/fluent-operator.yaml
@@ -6,11 +6,6 @@ package:
   copyright:
     - license: Apache-2.0
 
-environment:
-  contents:
-    packages:
-      - go
-
 var-transforms:
   - from: ${{package.version}}
     match: ^(\d)\.(\d)\.(\d)$
@@ -51,20 +46,19 @@ subpackages:
           packages:
             - fluent-bit
             - fluent-bit-compat
-            - fluent-watcher-compat
       pipeline:
         - runs: |
-            echo "Testing fluent-watcher"
-            # Run fluent-watcher in the background and redirect its output to a temporary file
-            tempfile=$(mktemp)
-            fluent-watcher > "$tempfile" 2>&1 &
-
-            sleep 5
-
-            # Use grep to filter the output
-            cat "$tempfile" | grep -i "fluent-bit started"
-
             fluent-watcher --help
+            fluent-watcher -watch-path /not/exist.conf
+        - name: "Test fluent-watcher"
+          uses: test/daemon-check-output
+          with:
+            start: "fluent-watcher -watch-path /fluent-bit/etc/fluent-bit.conf"
+            timeout: 60
+            expected_output: |
+              fluent-bit started
+              [fluent bit]
+              worker #0 started
 
   - name: fluent-watcher-config
     dependencies:
@@ -101,6 +95,10 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.contextdir}}"/fluent-bit/bin/
           ln -s /usr/bin/fluent-watcher "${{targets.contextdir}}"/fluent-bit/bin/fluent-watcher
+    test:
+      pipeline:
+        - runs: |
+            test "$(readlink /fluent-bit/bin/fluent-watcher)" = /usr/bin/fluent-watcher
 
 update:
   enabled: true
@@ -123,8 +121,17 @@ test:
       runs: |
         manager --help
     - name: "Test operator"
-      runs: |
-        kubectl create ns fluent
-        kubectl apply --server-side=true -f https://github.com/fluent/fluent-operator/releases/download/v${{package.version}}/setup.yaml
-        manager -metrics-bind-address 0.0.0.0:8082&
-        sleep 5; curl localhost:8082/metrics |grep workqueue_retries_total
+      uses: test/daemon-check-output
+      with:
+        setup: |
+          kubectl create ns fluent
+          kubectl apply --server-side=true -f https://raw.githubusercontent.com/fluent/fluent-operator/refs/tags/v${{package.version}}/manifests/setup/setup.yaml
+        start: "manager -metrics-bind-address 0.0.0.0:8082"
+        timeout: 60
+        expected_output: |
+          starting server
+          Starting EventSource
+          Starting Controller
+          Starting workers
+        post: |
+          curl -fsS --retry 3 localhost:8082/metrics | grep workqueue_retries_total
