--- a/snyk-cli.yaml
+++ b/snyk-cli.yaml
@@ -34,7 +34,9 @@ pipeline:
 
   - uses: go/bump
     with:
+      modroot: cliv2
       deps: |-
+        golang.org/x/crypto@v0.35.0
         golang.org/x/oauth2@v0.27.0
 
   - runs: git checkout -b release/wolfi # This is so the determine-release-channel.sh script decides the to use the correct channel and not create a -dev version
