fix error where tar was operating on an *

--- a/wolfi-keys.yaml
+++ b/wolfi-keys.yaml
@@ -1,7 +1,7 @@
 package:
   name: wolfi-keys
   version: 1
-  epoch: 9
+  epoch: 10
   description: "Wolfi signing keyring"
   copyright:
     - license: MIT
@@ -44,12 +44,15 @@ test:
         done
         apk update
         # Verify what should be a good signature
+        ls -halF /var/cache/apk/APKINDEX.*.tar.gz
         apk verify /var/cache/apk/APKINDEX.*.tar.gz
         # Now, tamper with a signature, and ensure the signature does not verify
-        d=$(mktemp -d)
-        cd "$d"
-        tar xf /var/cache/apk/APKINDEX.*.tar.gz
-        sed -i -e "1 s/^C:......../C:abcdefgh/" APKINDEX
-        tar zcf APKINDEX.bad.tar.gz .SIGN.RSA256.wolfi-signing.rsa.pub APKINDEX DESCRIPTION
-        # This must fail, due to the signature tampering
-        (apk verify APKINDEX.bad.tar.gz || true) | grep -i "BAD signature"
+        for f in /var/cache/apk/APKINDEX.*.tar.gz; do
+          d=$(mktemp -d)
+          cd "$d"
+          tar xf "$f"
+          sed -i -e "1 s/^C:......../C:abcdefgh/" APKINDEX
+          tar zcf APKINDEX.bad.tar.gz .SIGN.RSA256.wolfi-signing.rsa.pub APKINDEX DESCRIPTION
+          # This must fail, due to the signature tampering
+          (apk verify APKINDEX.bad.tar.gz || true) | grep -i "BAD signature"
+        done
