Add ldd-check test to several packages

--- a/pkgconf.yaml
+++ b/pkgconf.yaml
@@ -1,7 +1,7 @@
 package:
   name: pkgconf
-  version: "2.4.1"
-  epoch: 0
+  version: "2.4.3"
+  epoch: 1
   description: "An implementation of pkg-config"
   copyright:
     - license: ISC
@@ -23,7 +23,7 @@ pipeline:
     with:
       repository: https://github.com/pkgconf/pkgconf
       tag: pkgconf-${{package.version}}
-      expected-commit: 7e59a32a4b8d1881171b6e6d35fa5f527d888975
+      expected-commit: 1d37e711cefe83e6b5393b424af4c94da4e7e9d3
 
   - runs: |
       autoreconf -fiv
@@ -67,6 +67,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: pkgconf-dev
 
   - name: "pkgconf-doc"
     description: "pkgconf documentation"
