--- a/iperf3.yaml
+++ b/iperf3.yaml
@@ -1,7 +1,7 @@
 package:
   name: iperf3
   version: "3.18"
-  epoch: 0
+  epoch: 1
   description: A tool to measure IP bandwidth using UDP or TCP
   copyright:
     - license: BSD-3-Clause-LBNL
@@ -51,6 +51,11 @@ subpackages:
     dependencies:
       runtime:
         - iperf3
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: iperf3-dev
 
 update:
   enabled: true
