--- a/ldb.yaml
+++ b/ldb.yaml
@@ -1,7 +1,7 @@
 package:
   name: ldb
   version: 2.9.1
-  epoch: 4
+  epoch: 5
   description: schema-less, ldap like, API and database
   copyright:
     - license: LGPL-3.0-or-later
@@ -81,6 +81,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ldb-dev
 
   - range: py-versions
     name: py${{range.key}}-${{vars.pypi-package}}
