--- a/libmamba.yaml
+++ b/libmamba.yaml
@@ -1,7 +1,7 @@
 package:
   name: libmamba
   version: 2.0.5
-  epoch: 0
+  epoch: 1
   description: Cross-Platform Package Manager
   copyright:
     - license: BSD-3-Clause
@@ -146,6 +146,9 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: $(basename ${{targets.contextdir}})
+        - uses: test/tw/ldd-check
+          with:
+            packages: libmamba-dev
 
   - name: micromamba
     dependencies:
