--- a/libselinux.yaml
+++ b/libselinux.yaml
@@ -1,7 +1,7 @@
 package:
   name: libselinux
   version: "3.8.1"
-  epoch: 0
+  epoch: 1
   description: "SELinux library and simple utilities"
   copyright:
     - license: libselinux-1.0
@@ -58,6 +58,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: libselinux-dev
 
   - name: libselinux-python
     pipeline:
