--- a/mosquitto.yaml
+++ b/mosquitto.yaml
@@ -1,7 +1,7 @@
 package:
   name: mosquitto
   version: "2.0.21"
-  epoch: 1
+  epoch: 2
   description: open source MQTT broker
   copyright:
     - license: EPL-1.0
@@ -69,6 +69,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: mosquitto-dev
 
   - name: mosquitto-doc
     pipeline:
