--- a/oath-toolkit.yaml
+++ b/oath-toolkit.yaml
@@ -1,7 +1,7 @@
 package:
   name: oath-toolkit
   version: 2.6.12
-  epoch: 1
+  epoch: 2
   description: "The OATH Toolkit provides components for building one-time password authentication systems"
   copyright:
     - license: GPL-3.0-or-later
@@ -60,6 +60,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: oath-toolkit-dev
 
   - name: ${{package.name}}-doc
     pipeline:
