--- a/rrdtool.yaml
+++ b/rrdtool.yaml
@@ -1,7 +1,7 @@
 package:
   name: rrdtool
   version: 1.9.0
-  epoch: 3
+  epoch: 4
   description: Data logging and graphing application
   copyright:
     - license: GPL-2.0-or-later
@@ -100,6 +100,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: rrdtool-dev
 
   - name: rrdtool-doc
     pipeline:
