wildcard the pub key added to the bad tarball

--- a/wolfi-keys.yaml
+++ b/wolfi-keys.yaml
@@ -52,7 +52,7 @@ test:
           cd "$d"
           tar xf "$f"
           sed -i -e "1 s/^C:......../C:abcdefgh/" APKINDEX
-          tar zcf APKINDEX.bad.tar.gz .SIGN.RSA256.wolfi-signing.rsa.pub APKINDEX DESCRIPTION
+          tar zcf APKINDEX.bad.tar.gz .SIGN.RSA256.*.pub APKINDEX DESCRIPTION
           # This must fail, due to the signature tampering
           (apk verify APKINDEX.bad.tar.gz || true) | grep -i "BAD signature"
         done
