Add ldd-check test to several packages

--- a/at-spi2-core.yaml
+++ b/at-spi2-core.yaml
@@ -1,7 +1,7 @@
 package:
   name: at-spi2-core
   version: "2.55.90"
-  epoch: 1
+  epoch: 2
   description: Protocol definitions and daemon for D-Bus at-spi
   copyright:
     - license: LGPL-2.0-or-later
@@ -113,3 +113,6 @@ test:
         test -f /usr/lib/libatspi.so.0
 
         test -d /usr/share/defaults/at-spi2
+      uses: test/tw/ldd-check
+      with:
+        packages: at-spi2-core
