--- a/clamav-1.4.yaml
+++ b/clamav-1.4.yaml
@@ -1,7 +1,7 @@
 package:
   name: clamav-1.4
   version: 1.4.2
-  epoch: 2
+  epoch: 3
   description: An anti-virus toolkit for UNIX eis-ng backport
   copyright:
     - license: GPL-2.0-only
@@ -372,3 +372,6 @@ test:
     - runs: |
         clamsubmit --version
         clamsubmit --help
+      uses: test/tw/ldd-check
+      with:
+        packages: clamav-1.4
