--- a/clang-15.yaml
+++ b/clang-15.yaml
@@ -1,7 +1,7 @@
 package:
   name: clang-15
   version: 15.0.7
-  epoch: 6
+  epoch: 7
   description: "C language family frontend for LLVM"
   copyright:
     - license: Apache-2.0
@@ -325,3 +325,6 @@ test:
     - runs: |
         clang-15 --version
         clang-15 --help
+      uses: test/tw/ldd-check
+      with:
+        packages: clang-15
