--- a/confluent-docker-utils.yaml
+++ b/confluent-docker-utils.yaml
@@ -2,7 +2,7 @@
 package:
   name: confluent-docker-utils
   version: "0.0.157"
-  epoch: 0
+  epoch: 1
   description: This package provides Docker Utility Belt (dub) and Confluent Platform Utility Belt (cub).
   copyright:
     - license: Apache-2.0
@@ -91,6 +91,9 @@ test:
         jsonschema --help
         normalizer --version
         normalizer --help
+      uses: test/tw/ldd-check
+      with:
+        packages: confluent-docker-utils
     - uses: python/import
       with:
         import: confluent.docker_utils
