--- a/abseil-cpp.yaml
+++ b/abseil-cpp.yaml
@@ -7,7 +7,7 @@
 package:
   name: abseil-cpp
   version: "20250127.0" # On update, please check if -fdelete-null-pointer-checks is still required
-  epoch: 1
+  epoch: 2
   description: Abseil Common Libraries (C++)
   copyright:
     - license: Apache-2.0
@@ -73,3 +73,9 @@ update:
   enabled: true
   github:
     identifier: abseil/abseil-cpp
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: abseil-cpp
