--- a/apache-activemq-artemis.yaml
+++ b/apache-activemq-artemis.yaml
@@ -1,7 +1,7 @@
 package:
   name: apache-activemq-artemis
   version: "2.39.0"
-  epoch: 2
+  epoch: 3
   description: ActiveMQ Artemis is the next generation message broker from Apache ActiveMQ.
   copyright:
     - license: Apache-2.0
@@ -76,6 +76,9 @@ test:
         - maven
         - openjdk-${{vars.java-runtime-version}}-default-jdk
   pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: apache-activemq-artemis
     - name: "Setup activemq-artemis broker and start service"
       runs: |
         mkdir /var/lib/artemis-instance
