--- a/apache-arrow.yaml
+++ b/apache-arrow.yaml
@@ -1,7 +1,7 @@
 package:
   name: apache-arrow
   version: "19.0.1"
-  epoch: 1
+  epoch: 2
   description: "multi-language toolbox for accelerated data interchange and in-memory processing"
   copyright:
     - license: Apache-2.0
@@ -225,3 +225,9 @@ update:
   git:
     strip-prefix: apache-arrow-
     tag-filter-prefix: apache-arrow-
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: apache-arrow
