--- a/bluez.yaml
+++ b/bluez.yaml
@@ -2,7 +2,7 @@
 package:
   name: bluez
   version: "5.79"
-  epoch: 4
+  epoch: 5
   description: Tools for the Bluetooth protocol stack
   copyright:
     - license: GPL-2.0-or-later AND BSD-2-Clause AND MIT
@@ -160,3 +160,6 @@ test:
         mesh-cfgtest --help
         mpris-proxy --help
         rfcomm --help
+      uses: test/tw/ldd-check
+      with:
+        packages: bluez
