--- a/brew.yaml
+++ b/brew.yaml
@@ -1,7 +1,7 @@
 package:
   name: brew
   version: "4.4.23"
-  epoch: 0
+  epoch: 1
   description: "The homebrew package manager"
   copyright:
     - license: BSD-2-Clause
@@ -82,3 +82,6 @@ test:
     - runs: |
         . /etc/profile.d/brew.sh
         HOME=/root brew --version
+      uses: test/tw/ldd-check
+      with:
+        packages: brew
