--- a/c-ares.yaml
+++ b/c-ares.yaml
@@ -1,7 +1,7 @@
 package:
   name: c-ares
   version: 1.34.4
-  epoch: 1
+  epoch: 2
   description: "an asynchronous DNS resolution library"
   copyright:
     - license: MIT
@@ -64,3 +64,9 @@ update:
     identifier: c-ares/c-ares
     tag-filter-prefix: v
     strip-prefix: v
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: c-ares
