--- a/cilium-envoy-1.17.yaml
+++ b/cilium-envoy-1.17.yaml
@@ -2,7 +2,7 @@
 package:
   name: cilium-envoy-1.17
   version: "1.17.1"
-  epoch: 0
+  epoch: 1
   description: Envoy with additional cilium plugins
   copyright:
     - license: Apache-2.0
@@ -131,3 +131,6 @@ test:
     - runs: |
         cilium-envoy --version
         cilium-envoy --help
+      uses: test/tw/ldd-check
+      with:
+        packages: cilium-envoy-1.17
