--- a/dotnet-bootstrap-8.yaml
+++ b/dotnet-bootstrap-8.yaml
@@ -1,7 +1,7 @@
 package:
   name: dotnet-bootstrap-8
   version: "8.0.13"
-  epoch: 0
+  epoch: 1
   description: ".NET 8 SDK Bootstrap"
   copyright:
     - license: MIT
@@ -59,3 +59,9 @@ update:
     strip-prefix: v
     use-tag: true
     tag-filter: "v8"
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: dotnet-bootstrap-8
