--- a/dotnet-bootstrap-9.yaml
+++ b/dotnet-bootstrap-9.yaml
@@ -1,7 +1,7 @@
 package:
   name: dotnet-bootstrap-9
   version: 9.0.2
-  epoch: 0
+  epoch: 1
   description: ".NET 9 SDK Bootstrap"
   copyright:
     - license: MIT
@@ -59,3 +59,9 @@ update:
     strip-prefix: v
     use-tag: true
     tag-filter: "v9"
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: dotnet-bootstrap-9
