--- a/double-conversion.yaml
+++ b/double-conversion.yaml
@@ -1,7 +1,7 @@
 package:
   name: double-conversion
   version: "3.3.1"
-  epoch: 1
+  epoch: 2
   description: "Efficient binary-decimal and decimal-binary conversion routines for IEEE doubles"
   copyright:
     - license: BSD-3-Clause
@@ -57,6 +57,9 @@ test:
         else
           rm ./test && echo "Test Failed!" && exit 1
         fi
+      uses: test/tw/ldd-check
+      with:
+        packages: double-conversion
 
 update:
   enabled: true
