--- a/execline.yaml
+++ b/execline.yaml
@@ -1,7 +1,7 @@
 package:
   name: execline
   version: 2.9.6.1
-  epoch: 31
+  epoch: 32
   description: "a small scripting language intended to be an alternative to shell scripting"
   copyright:
     - license: ISC
@@ -70,3 +70,6 @@ test:
         withstdinas version
         eltest --help
         withstdinas help
+    - uses: test/tw/ldd-check
+      with:
+        packages: execline
