--- a/freetds.yaml
+++ b/freetds.yaml
@@ -1,7 +1,7 @@
 package:
   name: freetds
   version: "1.4.26"
-  epoch: 1
+  epoch: 2
   description: FreeTDS is a set of libraries for Unix and Linux that allows programs to natively talk to Microsoft SQL Server and Sybase databases.
   copyright:
     - license: GPL-2.0-or-later
@@ -71,3 +71,6 @@ test:
       runs: |
         tsql -C
         fisql -v
+      uses: test/tw/ldd-check
+      with:
+        packages: freetds
