--- a/frr-10.2.yaml
+++ b/frr-10.2.yaml
@@ -1,7 +1,7 @@
 package:
   name: frr-10.2
   version: 10.2.1
-  epoch: 1
+  epoch: 2
   description: The FRRouting Protocol Suite
   copyright:
     - license: GPL-2.0-only
@@ -117,3 +117,6 @@ test:
         /usr/lib/frr/zebra --version | grep ${{package.version}}
         /usr/lib/frr/bgpd --version | grep ${{package.version}}
         /usr/lib/frr/bfdd --version | grep ${{package.version}}
+      uses: test/tw/ldd-check
+      with:
+        packages: frr-10.2
