--- a/gcc-11.yaml
+++ b/gcc-11.yaml
@@ -1,7 +1,7 @@
 package:
   name: gcc-11
   version: 11.5.0
-  epoch: 3
+  epoch: 4
   description: "the GNU compiler collection - version 11"
   copyright:
     - license: GPL-3.0-or-later WITH GCC-exception-3.1
@@ -274,6 +274,9 @@ test:
         gcov-tool-11 --help
         lto-dump-11 --version
         lto-dump-11 --help
+      uses: test/tw/ldd-check
+      with:
+        packages: gcc-11
     - name: hello world c
       runs: |
         cat >hello.c <<"EOF"
