--- a/geos-3.13.yaml
+++ b/geos-3.13.yaml
@@ -1,7 +1,7 @@
 package:
   name: geos-3.13
   version: "3.13.1"
-  epoch: 1
+  epoch: 2
   description: GEOS is a library providing OpenGIS and JTS spatial operations in C++.
   copyright:
     - license: LGPL-2.1-or-later
@@ -129,3 +129,6 @@ test:
         ./geos_hello_world | grep -q "^Geometry: POINT (1 1)$" || exit 1
         geosop -v
         geosop --help
+      uses: test/tw/ldd-check
+      with:
+        packages: geos-3.13
