--- a/glib.yaml
+++ b/glib.yaml
@@ -1,7 +1,7 @@
 package:
   name: glib
   version: "2.84.0"
-  epoch: 1
+  epoch: 2
   description: Common C routines used by Gtk+ and other libs
   copyright:
     - license: LGPL-2.1-or-later
@@ -166,3 +166,6 @@ test:
         gio --help
         gio-querymodules --help
         glib-compile-schemas --help
+      uses: test/tw/ldd-check
+      with:
+        packages: glib
