--- a/gnu-libiconv.yaml
+++ b/gnu-libiconv.yaml
@@ -1,7 +1,7 @@
 package:
   name: gnu-libiconv
   version: "1.18"
-  epoch: 0
+  epoch: 1
   description: GNU charset conversion library for libc which doesn't implement it
   copyright:
     - license: LGPL-2.1-or-later
@@ -80,3 +80,6 @@ test:
     - runs: |
         gnu-iconv --version
         gnu-iconv --help
+      uses: test/tw/ldd-check
+      with:
+        packages: gnu-libiconv
