--- a/gnutls.yaml
+++ b/gnutls.yaml
@@ -1,7 +1,7 @@
 package:
   name: gnutls
   version: "3.8.9"
-  epoch: 1
+  epoch: 2
   description: TLS protocol implementation
   copyright:
     - license: LGPL-2.1-or-later
@@ -135,3 +135,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 1221
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: gnutls
