--- a/grafana-oncall.yaml
+++ b/grafana-oncall.yaml
@@ -1,7 +1,7 @@
 package:
   name: grafana-oncall
   version: "1.15.2"
-  epoch: 0
+  epoch: 1
   description: "Developer-friendly incident response with brilliant Slack integration"
   copyright:
     - license: AGPL-3.0-or-later
@@ -152,6 +152,9 @@ test:
     - name: Check db file
       runs: |
         stat /var/lib/oncall/oncall.db
+      uses: test/tw/ldd-check
+      with:
+        packages: grafana-oncall
     - name: Ensure manage.py works
       runs: |
         # Confirm manage.py loads Django etc. from the venv
