--- a/graphene.yaml
+++ b/graphene.yaml
@@ -2,7 +2,7 @@
 package:
   name: graphene
   version: 1.10.8
-  epoch: 5
+  epoch: 6
   description: A thin layer of graphic data types
   copyright:
     - license: MIT
@@ -57,3 +57,9 @@ update:
   github:
     identifier: ebassi/graphene
     use-tag: true
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: graphene
