--- a/graphviz.yaml
+++ b/graphviz.yaml
@@ -1,7 +1,7 @@
 package:
   name: graphviz
   version: 12.2.1
-  epoch: 1
+  epoch: 2
   description: Graph Visualization Tools
   copyright:
     - license: EPL-1.0
@@ -231,3 +231,6 @@ test:
         tred help
         twopi --help
         unflatten help
+      uses: test/tw/ldd-check
+      with:
+        packages: graphviz
