--- a/grpc-1.66.yaml
+++ b/grpc-1.66.yaml
@@ -1,7 +1,7 @@
 package:
   name: grpc-1.66
   version: 1.66.2
-  epoch: 7
+  epoch: 8
   description: The C based gRPC
   copyright:
     - license: Apache-2.0 AND BSD-3-Clause AND MIT
@@ -144,3 +144,9 @@ update:
     strip-prefix: v
     use-tag: true
     tag-filter-prefix: v1.66.
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: grpc-1.66
