--- a/grpc-1.68.yaml
+++ b/grpc-1.68.yaml
@@ -1,7 +1,7 @@
 package:
   name: grpc-1.68
   version: 1.68.2
-  epoch: 4
+  epoch: 5
   description: The C based gRPC
   copyright:
     - license: Apache-2.0 AND BSD-3-Clause AND MIT
@@ -162,3 +162,9 @@ update:
     strip-prefix: v
     use-tag: true
     tag-filter-prefix: v1.68.
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: grpc-1.68
