--- a/grpc-1.70.yaml
+++ b/grpc-1.70.yaml
@@ -1,7 +1,7 @@
 package:
   name: grpc-1.70
   version: "1.70.1"
-  epoch: 1
+  epoch: 2
   description: The C based gRPC
   copyright:
     - license: Apache-2.0 AND BSD-3-Clause AND MIT
@@ -167,3 +167,9 @@ update:
     strip-prefix: v
     use-tag: true
     tag-filter-prefix: v1.70.
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: grpc-1.70
