--- a/pkgconf.yaml
+++ b/pkgconf.yaml
@@ -1,7 +1,7 @@
 package:
   name: pkgconf
   version: "2.4.3"
-  epoch: 0
+  epoch: 1
   description: "An implementation of pkg-config"
   copyright:
     - license: ISC
@@ -67,6 +67,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: pkgconf-dev
 
   - name: "pkgconf-doc"
     description: "pkgconf documentation"
