Add ldd-check test to several packages

--- a/iperf3.yaml
+++ b/iperf3.yaml
@@ -51,11 +51,6 @@ subpackages:
     dependencies:
       runtime:
         - iperf3
-    test:
-      pipeline:
-        - uses: test/tw/ldd-check
-          with:
-            packages: iperf3-dev
 
 update:
   enabled: true
@@ -68,3 +63,6 @@ test:
     - runs: |
         iperf3 --version
         iperf3 --help
+    - uses: test/tw/ldd-check
+      with:
+        packages: iperf3
