--- a/libdrm.yaml
+++ b/libdrm.yaml
@@ -2,7 +2,7 @@
 package:
   name: libdrm
   version: 2.4.124
-  epoch: 1
+  epoch: 2
   description: Userspace interface to kernel DRM services
   copyright:
     - license: MIT
@@ -79,3 +79,6 @@ test:
         exynos_fimg2d_test --help
         modetest --help
         vbltest --help
+    - uses: test/tw/ldd-check
+      with:
+        packages: libdrm
