--- a/libgeotiff.yaml
+++ b/libgeotiff.yaml
@@ -2,7 +2,7 @@
 package:
   name: libgeotiff
   version: "1.7.4"
-  epoch: 1
+  epoch: 2
   description: TIFF based interchange format for georeferenced raster imagery
   copyright:
     - license: MIT
@@ -72,3 +72,6 @@ test:
     - runs: |
         makegeo --version
         makegeo --help
+    - uses: test/tw/ldd-check
+      with:
+        packages: libgeotiff
