--- a/icu.yaml
+++ b/icu.yaml
@@ -1,7 +1,7 @@
 package:
   name: icu
   version: "75.1"
-  epoch: 7
+  epoch: 8
   description: "International Components for Unicode library"
   copyright:
     - license: MIT
@@ -157,6 +157,9 @@ test:
         genccode --help
         gencmn help
         gensprep version
+    - uses: test/tw/ldd-check
+      with:
+        packages: icu
     - name: "Test basic character conversion"
       runs: |
         # Test UTF-8 to ASCII conversion with skip callback
