--- a/iniparser.yaml
+++ b/iniparser.yaml
@@ -1,7 +1,7 @@
 package:
   name: iniparser
   version: "4.2.6"
-  epoch: 1
+  epoch: 2
   description: "C library for parsing 'INI-style' files"
   copyright:
     - license: MIT
@@ -68,3 +68,9 @@ update:
     strip-prefix: v
     use-tag: true
     tag-filter: v
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: iniparser
