--- a/isa-l.yaml
+++ b/isa-l.yaml
@@ -1,7 +1,7 @@
 package:
   name: isa-l
   version: 2.31.1
-  epoch: 2
+  epoch: 3
   description: "Intelligent Storage Acceleration Library"
   copyright:
     - license: BSD-3-Clause
@@ -69,6 +69,9 @@ test:
         igzip -h
         igzip --version
         igzip --help
+    - uses: test/tw/ldd-check
+      with:
+        packages: isa-l
     - name: Compare igzip to gzip
       runs: |
         time igzip -3 -n < $(which kubectl) > igzip.gz
