--- a/jansson.yaml
+++ b/jansson.yaml
@@ -1,7 +1,7 @@
 package:
   name: jansson
   version: "2.14"
-  epoch: 4
+  epoch: 5
   description: lightweight JSON library
   copyright:
     - license: MIT
@@ -54,3 +54,9 @@ update:
   github:
     identifier: akheron/jansson
     strip-prefix: v
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: jansson
