--- a/jupyter-base-notebook.yaml
+++ b/jupyter-base-notebook.yaml
@@ -1,7 +1,7 @@
 package:
   name: jupyter-base-notebook
   version: 7.3.2
-  epoch: 1
+  epoch: 2
   description: Jupyter Notebook
   dependencies:
     runtime:
@@ -89,6 +89,9 @@ test:
         jupyter-execute --inplace notebook.ipynb
         export PYVERSION=$(python -c 'import sys; print(sys.version_info)')
         cat notebook.ipynb | jq '.cells [] .outputs [] .text []' | grep -F "$PYVERSION"
+    - uses: test/tw/ldd-check
+      with:
+        packages: jupyter-base-notebook
     - name: Run and test jupyter server
       uses: test/daemon-check-output
       with:
