--- a/ksh.yaml
+++ b/ksh.yaml
@@ -1,7 +1,7 @@
 package:
   name: ksh
   version: 1.0.10
-  epoch: 30
+  epoch: 31
   description: "KornShell 93u+m"
   copyright:
     - license: EPL-2.0
@@ -46,3 +46,6 @@ test:
     - runs: |
         version=$(/usr/bin/ksh -c "eval 'echo "\${.sh.version}"' 2>/dev/null")
         echo "$version" | grep "${{package.version}}"
+    - uses: test/tw/ldd-check
+      with:
+        packages: ksh
