--- a/lcms2.yaml
+++ b/lcms2.yaml
@@ -1,7 +1,7 @@
 package:
   name: lcms2
   version: "2.17"
-  epoch: 1
+  epoch: 2
   description: "Color Management Engine"
   copyright:
     - license: MIT AND GPL-3.0-only
@@ -87,3 +87,9 @@ update:
   github:
     identifier: mm2/Little-CMS
     strip-prefix: lcms
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: lcms2
