--- a/libassuan.yaml
+++ b/libassuan.yaml
@@ -1,7 +1,7 @@
 package:
   name: libassuan
   version: "3.0.2"
-  epoch: 1
+  epoch: 2
   description: IPC library used by some GnuPG related software
   copyright:
     - license: LGPL-2.1-or-later
@@ -60,3 +60,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 1559
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libassuan
