--- a/libavif.yaml
+++ b/libavif.yaml
@@ -1,7 +1,7 @@
 package:
   name: libavif
   version: "1.2.0"
-  epoch: 1
+  epoch: 2
   description: Library for encoding and decoding .avif files
   copyright:
     - license: BSD-2-Clause
@@ -78,3 +78,9 @@ update:
   github:
     identifier: AOMediaCodec/libavif
     strip-prefix: v
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libavif
