--- a/libbpf.yaml
+++ b/libbpf.yaml
@@ -1,7 +1,7 @@
 package:
   name: libbpf
   version: 1.5.0
-  epoch: 2
+  epoch: 3
   description: "A library for interacting with the Linux kernel's Berkeley Packet Filter (BPF) facility from user space"
   copyright:
     - license: GPL-2.0-only
@@ -68,6 +68,9 @@ test:
     - name: "Check libbpf.h header"
       runs: |
         test -f /usr/include/bpf/libbpf.h
+    - uses: test/tw/ldd-check
+      with:
+        packages: libbpf
     - name: "Check libelf.so library"
       runs: |
         test -f /usr/lib64/libbpf.so
