--- a/libdbi.yaml
+++ b/libdbi.yaml
@@ -1,7 +1,7 @@
 package:
   name: libdbi
   version: 0.9.0
-  epoch: 3
+  epoch: 4
   description: "Database independent abstraction layer for C"
   copyright:
     - license: LGPL-2.1-or-later
@@ -48,3 +48,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 1589
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libdbi
