--- a/libdwarf.yaml
+++ b/libdwarf.yaml
@@ -1,7 +1,7 @@
 package:
   name: libdwarf
   version: 0.11.1
-  epoch: 2
+  epoch: 3
   description: Parsing library for DWARF2 and later debugging file format
   copyright:
     - license: LGPL-2.1-only
@@ -104,6 +104,9 @@ subpackages:
 test:
   pipeline:
     - runs: stat /usr/lib/libdwarf.so.${{package.version}}
+    - uses: test/tw/ldd-check
+      with:
+        packages: libdwarf
 
 update:
   enabled: true
