--- a/libeconf.yaml
+++ b/libeconf.yaml
@@ -1,7 +1,7 @@
 package:
   name: libeconf
   version: "0.7.7"
-  epoch: 2
+  epoch: 3
   description: Enhanced Config File Parser
   copyright:
     - license: MIT
@@ -54,7 +54,9 @@ update:
 
 test:
   pipeline:
-    - uses: test/pkgconf
+    - uses: test/tw/ldd-check
+      with:
+        packages: libeconf
     - name: "Verify econftool availability"
       runs: |
         econftool --help
