--- a/libedit.yaml
+++ b/libedit.yaml
@@ -1,7 +1,7 @@
 package:
   name: libedit
   version: 3.1
-  epoch: 7
+  epoch: 8
   description: "the NetBSD editline library"
   copyright:
     - license: BSD-3-Clause
@@ -62,3 +62,9 @@ update:
   exclude-reason: version contains a date in the fetch URL
   release-monitor:
     identifier: 1599
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libedit
