Add ldd-check test to several packages

--- a/libinput.yaml
+++ b/libinput.yaml
@@ -2,7 +2,7 @@
 package:
   name: libinput
   version: 1.27.1
-  epoch: 1
+  epoch: 2
   description: Library for handling input devices
   copyright:
     - license: MIT
@@ -94,3 +94,6 @@ test:
     - runs: |
         libinput --version
         libinput --help
+    - uses: test/tw/ldd-check
+      with:
+        packages: libinput
