--- a/libmamba.yaml
+++ b/libmamba.yaml
@@ -146,9 +146,6 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: $(basename ${{targets.contextdir}})
-        - uses: test/tw/ldd-check
-          with:
-            packages: libmamba-dev
 
   - name: micromamba
     dependencies:
@@ -193,6 +190,9 @@ test:
     - runs: |
         micromamba --help
         bash -c "micromamba shell init -s bash -p ~/micromamba; source ~/.bashrc; micromamba activate; micromamba install python=3.11 requests -c conda-forge"
+    - uses: test/tw/ldd-check
+      with:
+        packages: libmamba
     - runs: |
         mamba-package --help
     - uses: test/ldd-check
