--- a/libnvidia-container.yaml
+++ b/libnvidia-container.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnvidia-container
   version: "1.17.4"
-  epoch: 1
+  epoch: 2
   description: NVIDIA container runtime library
   copyright:
     - license: Apache-2.0
@@ -75,6 +75,9 @@ test:
         ldd /usr/lib/libnvidia-container.so
         ldd /usr/lib/libnvidia-container-go.so
         nvidia-container-cli --help
+    - uses: test/tw/ldd-check
+      with:
+        packages: libnvidia-container
     - uses: test/pkgconf
     - name: Test nvidia-container-cli
       runs: nvidia-container-cli --version
