--- a/libgit2.yaml
+++ b/libgit2.yaml
@@ -1,7 +1,7 @@
 package:
   name: libgit2
   version: 1.9.0
-  epoch: 1
+  epoch: 2
   description: "A cross-platform, linkable library implementation of Git that you can use in your application."
   copyright:
     - license: GPL-2.0-only WITH GCC-exception-2.0
@@ -111,3 +111,6 @@ test:
     - runs: |
         git2 --version
         git2 --help
+    - uses: test/tw/ldd-check
+      with:
+        packages: libgit2
