--- a/libice.yaml
+++ b/libice.yaml
@@ -1,7 +1,7 @@
 package:
   name: libice
   version: 1.1.2
-  epoch: 1
+  epoch: 2
   description: X11 Inter-Client Exchange library
   copyright:
     - license: X11
@@ -82,3 +82,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 1638
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libice
