--- a/libimagequant.yaml
+++ b/libimagequant.yaml
@@ -107,12 +107,15 @@ subpackages:
             ./test_libimagequant
             ldd ./test_libimagequant | grep "libimagequant.so" && exit 0 || exit 1
         - uses: test/pkgconf
-        - uses: test/tw/ldd-check
-          with:
-            packages: libimagequant-dev
 
 update:
   enabled: true
   github:
     identifier: ImageOptim/libimagequant
     use-tag: true
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libimagequant
