--- a/libmd.yaml
+++ b/libmd.yaml
@@ -1,7 +1,7 @@
 package:
   name: libmd
   version: 1.1.0
-  epoch: 4
+  epoch: 5
   description: Message Digest functions from BSD systems
   copyright:
     - license: CC-PDDC
@@ -56,3 +56,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 15525
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libmd
