--- a/libmemcached.yaml
+++ b/libmemcached.yaml
@@ -1,7 +1,7 @@
 package:
   name: libmemcached
   version: 1.1.4
-  epoch: 3
+  epoch: 4
   description: Client library and command line tools for memcached server (resurrected)
   copyright:
     - license: BSD-3-Clause
@@ -97,3 +97,6 @@ test:
         memslap --help
         memstat --help
         memtouch --help
+    - uses: test/tw/ldd-check
+      with:
+        packages: libmemcached
