--- a/libmspack.yaml
+++ b/libmspack.yaml
@@ -2,7 +2,7 @@
 package:
   name: libmspack
   version: 0.11_alpha
-  epoch: 2
+  epoch: 3
   description: Library for Microsoft CAB compression formats
   copyright:
     - license: LGPL-2.1-only
@@ -50,3 +50,9 @@ update:
   manual: true # latest version doesn't seem to match what's reported at https://www.cabextract.org.uk/libmspack
   release-monitor:
     identifier: 16827
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libmspack
