--- a/libnet.yaml
+++ b/libnet.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnet
   version: "1.3"
-  epoch: 4
+  epoch: 5
   description: A generic networking API that provides access to several protocols
   copyright:
     - license: BSD-2-Clause
@@ -66,3 +66,9 @@ update:
   github:
     identifier: libnet/libnet
     strip-prefix: v
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libnet
