--- a/libnetfilter_cthelper.yaml
+++ b/libnetfilter_cthelper.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnetfilter_cthelper
   version: "1.0.1"
-  epoch: 5
+  epoch: 6
   description: A Netfilter netlink library for connection tracking helpers
   copyright:
     - license: GPL-2.0-or-later
@@ -43,3 +43,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 1677
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libnetfilter_cthelper
