--- a/libnetfilter_cttimeout.yaml
+++ b/libnetfilter_cttimeout.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnetfilter_cttimeout
   version: "1.0.1"
-  epoch: 5
+  epoch: 6
   description: Library for the connection tracking timeout infrastructure
   copyright:
     - license: GPL-2.0-or-later
@@ -43,3 +43,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 1676
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libnetfilter_cttimeout
