--- a/libnl3.yaml
+++ b/libnl3.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnl3
   version: 3.11.0
-  epoch: 3
+  epoch: 4
   description: Library for applications dealing with netlink sockets
   copyright:
     - license: LGPL-2.1-or-later
@@ -178,3 +178,9 @@ update:
   github:
     identifier: thom311/libnl
     strip-prefix: libnl
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libnl3
