--- a/libnotify.yaml
+++ b/libnotify.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnotify
   version: "0.8.4"
-  epoch: 1
+  epoch: 2
   description: "GNOME/libnotify mirror"
   copyright:
     - license: LGPL-2.1-or-later
@@ -76,6 +76,9 @@ test:
     - runs: |
         notify-send --version
         notify-send --help
+    - uses: test/tw/ldd-check
+      with:
+        packages: libnotify
     - name: "Test compilation with development files"
       runs: |
         cat > test.c << 'EOF'
