--- a/libogg.yaml
+++ b/libogg.yaml
@@ -1,7 +1,7 @@
 package:
   name: libogg
   version: 1.3.5
-  epoch: 4
+  epoch: 5
   description: Ogg bitstream and framing library
   copyright:
     - license: BSD-3-Clause
@@ -75,3 +75,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 1694
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libogg
