--- a/libpciaccess.yaml
+++ b/libpciaccess.yaml
@@ -2,7 +2,7 @@
 package:
   name: libpciaccess
   version: 0.18.1
-  epoch: 2
+  epoch: 3
   description: X11 PCI access library
   copyright:
     - license: X11
@@ -60,3 +60,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 1703
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libpciaccess
