Add ldd-check test to several packages

--- a/libselinux.yaml
+++ b/libselinux.yaml
@@ -58,9 +58,6 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
-        - uses: test/tw/ldd-check
-          with:
-            packages: libselinux-dev
 
   - name: libselinux-python
     pipeline:
@@ -80,6 +77,9 @@ test:
         avcstat --help
         getenforce
         # Most of the binaries don't have easy --help options to test
+    - uses: test/tw/ldd-check
+      with:
+        packages: libselinux
 
 update:
   enabled: true
