--- a/libslirp.yaml
+++ b/libslirp.yaml
@@ -1,7 +1,7 @@
 package:
   name: libslirp
   version: "4.9.0"
-  epoch: 1
+  epoch: 2
   description: A general purpose TCP-IP emulator
   copyright:
     - license: BSD-3-Clause
@@ -49,3 +49,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 96796
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libslirp
