--- a/liburing.yaml
+++ b/liburing.yaml
@@ -1,7 +1,7 @@
 package:
   name: liburing
   version: "2.9"
-  epoch: 1
+  epoch: 2
   description: Linux kernel io_uring access library.
   copyright:
     - license: MIT OR LGPL-2.1-or-later
@@ -80,3 +80,9 @@ update:
     strip-prefix: liburing-
     tag-filter: liburing-
     use-tag: true
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: liburing
