--- a/libva.yaml
+++ b/libva.yaml
@@ -2,7 +2,7 @@
 package:
   name: libva
   version: 2.22.0
-  epoch: 4
+  epoch: 5
   description: Video Acceleration (VA) API for Linux
   copyright:
     - license: MIT
@@ -60,3 +60,9 @@ update:
   enabled: true
   github:
     identifier: intel/libva
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libva
