--- a/libpng.yaml
+++ b/libpng.yaml
@@ -1,7 +1,7 @@
 package:
   name: libpng
   version: "1.6.47"
-  epoch: 0
+  epoch: 1
   description: Portable Network Graphics library
   copyright:
     - license: Libpng
@@ -92,3 +92,9 @@ update:
     identifier: pnggroup/libpng
     strip-prefix: v
     use-tag: true
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libpng
