--- a/libsass.yaml
+++ b/libsass.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsass
   version: "3.6.6"
-  epoch: 2
+  epoch: 3
   description: C/C++ implementation of a Sass compiler
   copyright:
     - license: MIT
@@ -103,6 +103,9 @@ test:
 
         gcc test.c -o test_sass -lsass
         ./test_sass
+    - uses: test/tw/ldd-check
+      with:
+        packages: libsass
     - name: "Test variable compilation"
       runs: |
         cat << EOF > test_vars.c
