--- a/libsdl2-ttf.yaml
+++ b/libsdl2-ttf.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsdl2-ttf
   version: 2.24.0
-  epoch: 2
+  epoch: 3
   description: A library that allows you to use TrueType fonts in your SDL applications (Version 2)
   copyright:
     - license: Zlib
@@ -59,3 +59,6 @@ test:
     - runs: |
         set -euo pipefail
         pkg-config --modversion SDL2_ttf | grep -q "${{package.version}}"
+    - uses: test/tw/ldd-check
+      with:
+        packages: libsdl2-ttf
