--- a/libsdl2.yaml
+++ b/libsdl2.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsdl2
   version: "2.32.2"
-  epoch: 0
+  epoch: 1
   description: Simple DirectMedia Layer is a cross-platform development library designed to provide low level access to audio, keyboard, mouse, joystick, and graphics hardware via OpenGL and Direct3D.
   copyright:
     - license: Zlib
@@ -60,3 +60,6 @@ test:
     - runs: |
         set -euo pipefail
         pkg-config --modversion sdl2 | grep -q "${{package.version}}"
+    - uses: test/tw/ldd-check
+      with:
+        packages: libsdl2
