--- a/libsdl3.yaml
+++ b/libsdl3.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsdl3
   version: "3.2.8"
-  epoch: 1
+  epoch: 2
   description: Simple DirectMedia Layer is a cross-platform development library designed to provide low level access to audio, keyboard, mouse, joystick, and graphics hardware via OpenGL and Direct3D.
   copyright:
     - license: Zlib
@@ -81,3 +81,6 @@ test:
     - runs: |
         set -euo pipefail
         pkg-config --modversion sdl3 | grep -q "${{package.version}}"
+    - uses: test/tw/ldd-check
+      with:
+        packages: libsdl3
