--- a/libsecret.yaml
+++ b/libsecret.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsecret
   version: "0.21.6"
-  epoch: 1
+  epoch: 2
   description: Library for storing and retrieving passwords and other secrets
   copyright:
     - license: LGPL-2.0-or-later
@@ -83,3 +83,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 13150
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libsecret
