--- a/libsemanage.yaml
+++ b/libsemanage.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsemanage
   version: "3.8.1"
-  epoch: 1
+  epoch: 2
   description: "SELinux library and simple utilities"
   copyright:
     - license: LGPL-2.1-only
@@ -68,3 +68,9 @@ update:
     tag-filter: libsemanage-
     strip-prefix: libsemanage-
     use-tag: true
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libsemanage
