--- a/libsepol.yaml
+++ b/libsepol.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsepol
   version: "3.8.1"
-  epoch: 1
+  epoch: 2
   description: "SELinux binary policy manipulation library"
   copyright:
     - license: LGPL-2.1
@@ -55,3 +55,6 @@ test:
         for b in chkcon sepol_check_access sepol_compute_av sepol_compute_member sepol_compute_relabel sepol_validate_transition; do
           $b | grep "usage: "
         done
+    - uses: test/tw/ldd-check
+      with:
+        packages: libsepol
