--- a/libspatialindex.yaml
+++ b/libspatialindex.yaml
@@ -1,7 +1,7 @@
 package:
   name: libspatialindex
   version: 2.1.0
-  epoch: 1
+  epoch: 2
   description: "C++ implementation of R*-tree, an MVR-tree and a TPR-tree with C API"
   copyright:
     - license: MIT
@@ -52,6 +52,9 @@ test:
     - name: "Check libspatialindex.h header"
       runs: |
         test -f /usr/include/spatialindex/RTree.h
+    - uses: test/tw/ldd-check
+      with:
+        packages: libspatialindex
     - name: "Check libspatialindex.so library"
       runs: |
         test -f /usr/lib/libspatialindex.so
