--- a/libtasn1.yaml
+++ b/libtasn1.yaml
@@ -1,7 +1,7 @@
 package:
   name: libtasn1
   version: "4.20.0"
-  epoch: 1
+  epoch: 2
   description: The ASN.1 library used in GNUTLS
   copyright:
     - license: LGPL-2.1-or-later
@@ -77,3 +77,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 1734
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libtasn1
