--- a/libtheora.yaml
+++ b/libtheora.yaml
@@ -1,7 +1,7 @@
 package:
   name: libtheora
   version: 1.1.1
-  epoch: 4
+  epoch: 5
   description: An open video codec developed by the Xiph.org
   copyright:
     - license: BSD-3-Clause
@@ -89,3 +89,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 11793
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libtheora
