--- a/libutempter.yaml
+++ b/libutempter.yaml
@@ -1,7 +1,7 @@
 package:
   name: libutempter
   version: 1.2.3
-  epoch: 1
+  epoch: 2
   description: Library interface to record user sessions in utmp/wtmp files
   copyright:
     - license: LGPL-2.1-or-later
@@ -62,3 +62,9 @@ update:
     identifier: altlinux/libutempter
     strip-suffix: -alt1
     use-tag: true
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libutempter
