--- a/libvncserver.yaml
+++ b/libvncserver.yaml
@@ -1,7 +1,7 @@
 package:
   name: libvncserver
   version: 0.9.15
-  epoch: 1
+  epoch: 2
   description: Library to make writing a vnc server easy
   copyright:
     - license: GPL-2.0-or-later
@@ -79,3 +79,9 @@ update:
     strip-prefix: LibVNCServer-
     use-tag: true
     tag-filter: LibVNCServer-
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libvncserver
