Fix fontsproto split by keeping headers in main package (#44859)

--- a/fontsproto.yaml
+++ b/fontsproto.yaml
@@ -5,6 +5,14 @@ package:
   description: X.org fontsproto
   copyright:
     - license: MIT-open-group
+  contents:
+    - usr/include/X11/fonts/FS.h
+    - usr/include/X11/fonts/FSproto.h
+    - usr/include/X11/fonts/font.h
+    - usr/include/X11/fonts/fontproto.h
+    - usr/include/X11/fonts/fontstruct.h
+    - usr/include/X11/fonts/fsmasks.h
+    - usr/share/doc/fontsproto/fsproto.xml
 
 environment:
   contents:
@@ -35,6 +43,10 @@ subpackages:
     pipeline:
       - uses: split/dev
     test:
+      environment:
+        contents:
+          packages:
+            - build-base
       pipeline:
         - uses: test/pkgconf
 
