add runtime deps for kots
Signed-off-by: Rakshit Gondwal <rakshit.gondwal@chainguard.dev>

--- a/kots.yaml
+++ b/kots.yaml
@@ -1,10 +1,23 @@
 package:
   name: kots
   version: "1.124.4"
-  epoch: 2
+  epoch: 3
   description: Kubernetes Off-The-Shelf (KOTS) Software
   copyright:
     - license: Apache-2.0
+  dependencies:
+    runtime:
+      - bash
+      - busybox
+      - curl
+      - git
+      - helm
+      - kubectl-1.29
+      - kubectl
+      - kustomize
+      - py3-dateutil
+      - py3-magic
+      - s3cmd
 
 environment:
   contents:
