Fixed linting issue
Signed-off-by: Anmol Virdi <anmol.virdi@chainguard.dev>

--- a/figlet.yaml
+++ b/figlet.yaml
@@ -17,6 +17,7 @@ pipeline:
     with:
       repository: https://github.com/cmatsuoka/figlet
       branch: master
+      expected-commit: 202a0a8110650a943f1125f536b3bb455cf72ee1
 
   - name: Configure and build
     runs: |
