Added doc subpackage for figlet
Signed-off-by: Anmol Virdi <anmol.virdi@chainguard.dev>

--- a/figlet.yaml
+++ b/figlet.yaml
@@ -25,6 +25,15 @@ pipeline:
       make clean
       make DESTDIR="${{targets.destdir}}" BINDIR=/usr/bin MANDIR=/usr/share/man DEFAULTFONTDIR=/usr/share/figlet/fonts install
 
+subpackages:
+  - name: figlet-doc
+    description: figlet documentation
+    pipeline:
+      - uses: split/manpages
+    test:
+      pipeline:
+        - uses: test/docs
+
 update:
   enabled: false
   exclude-reason: Setting the update to false since the package no longer receives updates.
