Moved make install to autoconf/make-install step
Signed-off-by: Anmol Virdi <anmol.virdi@chainguard.dev>

--- a/figlet.yaml
+++ b/figlet.yaml
@@ -2,7 +2,7 @@
 package:
   name: figlet
   version: 2.2.5
-  epoch: 0
+  epoch: 27
   description: Program that creates large characters out of ordinary screen characters.
   copyright:
     - license: BSD-3-Clause
@@ -19,11 +19,10 @@ pipeline:
       repository: https://github.com/cmatsuoka/figlet
       branch: master
       expected-commit: 202a0a8110650a943f1125f536b3bb455cf72ee1
+  - uses: autoconf/make-install
+    with:
+      opts: "DEFAULTFONTDIR=/usr/share/figlet/fonts DESTDIR=${{targets.destdir}} BINDIR=/usr/bin MANDIR=/usr/share/man"
 
-  - name: Configure and build
-    runs: |
-      make clean
-      make DESTDIR="${{targets.destdir}}" BINDIR=/usr/bin MANDIR=/usr/share/man DEFAULTFONTDIR=/usr/share/figlet/fonts install
 
 subpackages:
   - name: figlet-doc
