Disable pip check test
Verified same behaviour with pypy:3.11-7 image

pypy does magic to make cffi work which pip is unaware of

Signed-off-by: Pris Nasrat <pris.nasrat@chainguard.dev>

--- a/pypy-3.11.yaml
+++ b/pypy-3.11.yaml
@@ -222,7 +222,9 @@ test:
         d=$(mktemp -d)
         pypy -m venv "$d"
         $d/bin/pip list
-        $d/bin/pip check
+        # pip check fails on pypy replicated upstream
+        # # ./.venv/bin/pip check
+        # cffi 1.18.0.dev0 requires pycparser, which is not installed.
         rm -Rf "$d"
     - name: "Check pip cache functionality"
       runs: |
