Updated nats-box tests
Signed-off-by: Anmol Virdi <anmol.virdi@chainguard.dev>

--- a/nats-box.yaml
+++ b/nats-box.yaml
@@ -41,12 +41,7 @@ update:
 
 test:
   pipeline:
-    - name: "Verify basic components"
+    - name: "Verify entrypoint.sh and profile.sh files"
       runs: |
-        nats --version
-        nats-top --version
-        nsc --version
-        update-ca-certificates --version
-        curl --version
-        jq --version
-        figlet -v
+        test -s "../../etc/profile.d/profile.sh"
+        test -s "../../entrypoint.sh"
