Update ceph.yaml to add new dependencies and enable Git versioning in the build pipeline

--- a/ceph.yaml
+++ b/ceph.yaml
@@ -13,9 +13,12 @@ package:
       - libstdc++
       - libudev
       - openssl
-      - python-3.11
-      - zlib
+      - py3.11-packaging
       - py3.11-prettytable
+      - py3.11-pyyaml
+      - python-3.11
+      - yaml
+      - zlib
 
 environment:
   contents:
@@ -109,7 +112,7 @@ pipeline:
         -DALLOCATOR=libc \
         -DWITH_GTEST_PARALLEL=ON \
         -DWITH_PYTHON3=3.11 \
-        -DENABLE_GIT_VERSION=OFF \
+        -DENABLE_GIT_VERSION=ON \
         -DLUA_LIBRARIES=/usr/lib/lua5.4/liblua.so \
         -DWITH_BABELTRACE=OFF \
         -DWITH_JAEGER=OFF \
@@ -144,9 +147,30 @@ pipeline:
 
   - uses: strip
 
+subpackages:
+  - name: ${{package.name}}-dev
+    dependencies:
+      runtime:
+        - ${{package.name}}
+    pipeline:
+      - uses: split/dev
+
 test:
   pipeline:
-    - runs: ceph --version - cephadm --version - ceph-volume --version - ceph-fuse --version - ceph-mds --version - ceph-mgr --version - ceph-mon --version - ceph-osd --version - ceph-objectstore-tool --version - radosgw-admin --version - rbd --version
+    - name: Ensure version build
+      runs: |
+        ceph --version  | grep ${{package.version}}
+        cephadm version | grep ${{package.version}}
+        ceph-fuse --version | grep ${{package.version}}
+        ceph-mds --version  | grep ${{package.version}}
+        ceph-mgr --version | grep ${{package.version}}
+        ceph-mon --version | grep ${{package.version}}
+        ceph-osd --version | grep ${{package.version}}
+        ceph-objectstore-tool --version | grep ${{package.version}}
+        radosgw --version | grep ${{package.version}}
+        radosgw-admin --version | grep ${{package.version}}
+        rbd --version | grep ${{package.version}}
+    - runs: cephadm bootstrap --orphan-initial-daemons
 
 update:
   enabled: true
