pypy: use tag-filter-prefix
Signed-off-by: Pris Nasrat <pris.nasrat@chainguard.dev>

--- a/pypy-3.10.yaml
+++ b/pypy-3.10.yaml
@@ -235,5 +235,6 @@ update:
   enabled: true
   github:
     identifier: pypy/pypy
+    tag-filter-prefix: release-pypy3.10-v
     strip-prefix: release-pypy3.10-v
     use-tag: true
