--- a/pypy-3.11.yaml
+++ b/pypy-3.11.yaml
@@ -236,5 +236,6 @@ update:
   enabled: true
   github:
     identifier: pypy/pypy
+    tag-filter-prefix: release-pypy3.11-v
     strip-prefix: release-pypy3.11-v
     use-tag: true
