Fixed build failing due to gobump and upstream envoy issue

--- a/victoriametrics.yaml
+++ b/victoriametrics.yaml
@@ -22,7 +22,10 @@ pipeline:
 
   - uses: go/bump
     with:
+      # Skipping tidy and bumping envoy is a workaround for https://github.com/envoyproxy/go-control-plane/issues/1083
+      skip-initial-tidy: true
       deps: |-
+        github.com/envoyproxy/go-control-plane/envoy@v1.32.4
         golang.org/x/oauth2@v0.27.0
 
   - uses: go/build
