change chmod directory
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/prometheus-alertmanager.yaml
+++ b/prometheus-alertmanager.yaml
@@ -55,7 +55,7 @@ subpackages:
           mkdir -p ${{targets.contextdir}}/opt/bitnami/alertmanager/data/
           mkdir -p ${{targets.contextdir}}/etc/alertmanager
           mkdir -p ${{targets.contextdir}}/alertmanager
-          chmod g+rwX ${{targets.contextdir}}/opt/bitnami
+          chmod g+rwX ${{targets.contextdir}}/opt/bitnami/alertmanager/data/
           ln -sf /usr/bin/alertmanager ${{targets.contextdir}}/opt/bitnami/alertmanager/bin/alertmanager
           ln -sf /usr/bin/amtool ${{targets.contextdir}}/opt/bitnami/alertmanager/bin/amtool
           ln -sf /etc/alertmanager/alertmanager.yml ${{targets.contextdir}}/opt/bitnami/alertmanager/conf/config.yml
