Add the pkgconf test to mariadb-11.7 (#43742)
The linter told me to add the pkgconf test so I did and it passed.

Signed-off-by: Brian Murray <brian.murray@chainguard.dev>

--- a/mariadb-11.7.yaml
+++ b/mariadb-11.7.yaml
@@ -161,6 +161,7 @@ subpackages:
       - uses: split/dev
     test:
       pipeline:
+        - uses: test/pkgconf
         - uses: test/tw/ldd-check
           with:
             packages: mariadb-11.7-dev
