use tw/header-check
drop patch on libb64-1.2 (and drop the test)
also drop the test on doctest
use tw/header-check everywhere else

--- a/tinyxml.yaml
+++ b/tinyxml.yaml
@@ -58,7 +58,7 @@ subpackages:
     description: tinyxml dev
     test:
       pipeline:
-        - uses: test/headers
+        - uses: test/tw/header-check
 
 update:
   enabled: true
