add an configure-opts input to header-check, and use it
the libb64-1.2 headers require a specific CPPFLAGS option to work

--- a/libb64-1.2.yaml
+++ b/libb64-1.2.yaml
@@ -50,3 +50,10 @@ update:
     identifier: libb64/libb64
     strip-prefix: v
     tag-filter: v1.2.
+
+test:
+  environment:
+    contents:
+      configure-opts: "CFLAGS=-DBUFFERSIZE=123456"
+  pipeline:
+    - uses: test/tw/header-check
