--- a/pipelines/test/tw/header-check.yaml
+++ b/pipelines/test/tw/header-check.yaml
@@ -8,8 +8,12 @@ inputs:
     description: check the header files in provided packages
     required: false
     default: "${{context.name}}"
+  configure-opts:
+    description: any additional configure options required for the headers in this package
+    required: false
+    default: ""
 
 pipeline:
   - name: check header files using header-check
     runs: |
-      header-check "--packages=${{context.name}}"
+      header-check "--packages=${{context.name}}" "--configure-opts='${{inputs.configure-opts}}'"
