Add ldd-check test to several packages (#45634)
Signed-off-by: Brian Murray <brian.murray@chainguard.dev>

--- a/libsm.yaml
+++ b/libsm.yaml
@@ -1,7 +1,7 @@
 package:
   name: libsm
   version: "1.2.6"
-  epoch: 0
+  epoch: 1
   description: X11 Session Management library
   copyright:
     - license: MIT
@@ -80,3 +80,9 @@ update:
   enabled: true
   release-monitor:
     identifier: 1726
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: libsm
