maybe get the input parameter syntax right?

--- a/libb64-1.2.yaml
+++ b/libb64-1.2.yaml
@@ -52,8 +52,7 @@ update:
     tag-filter: v1.2.
 
 test:
-  environment:
-    contents:
-      configure-opts: "CPPFLAGS=-DBUFFERSIZE=123456"
   pipeline:
     - uses: test/tw/header-check
+      with:
+        configure-opts: "CPPFLAGS=-DBUFFERSIZE=123456"
