add some basic sniff tests for apache-orc

--- a/apache-orc.yaml
+++ b/apache-orc.yaml
@@ -1,7 +1,7 @@
 package:
   name: apache-orc
   version: "2.1.0"
-  epoch: 0
+  epoch: 1
   description: "the smallest, fastest columnar storage for Hadoop workloads"
   copyright:
     - license: Apache-2.0
@@ -56,3 +56,14 @@ update:
   github:
     identifier: apache/orc
     strip-prefix: v
+
+test:
+  pipeline:
+    - runs: |
+        csv-import --help 2>&1 | grep -q ^Usage:
+        orc-contents --help 2>&1 | grep -q ^Usage:
+        orc-memory --help 2>&1 | grep -q ^Usage:
+        orc-metadata --help 2>&1 | grep -q ^Usage:
+        orc-scan --help 2>&1 | grep -q ^Usage:
+        orc-statistics --help 2>&1 | grep -q ^Usage:
+        timezone-dump 2>&1 | grep -q ^Usage:
