add test/daemon-check-output test as well
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/prometheus-alertmanager.yaml
+++ b/prometheus-alertmanager.yaml
@@ -72,6 +72,14 @@ subpackages:
             /opt/bitnami/alertmanager/bin/alertmanager --help
             /opt/bitnami/alertmanager/bin/amtool --version | grep ${{package.version}}
             /opt/bitnami/alertmanager/bin/amtool --help
+        - name: "start alertmanager and test"
+          uses: test/daemon-check-output
+          with:
+            start: /opt/bitnami/alertmanager/bin/alertmanager --config.file=test-alertmanager-config.yaml --storage.path=alertmanager --web.listen-address=127.0.0.1:9093 --cluster.listen-address="" --log.level=debug
+            timeout: 30
+            expected_output: |
+              Starting Alertmanager
+              Build context
 
 update:
   enabled: true
