Add glibc dependencies to glibc binary subpackages.
Signed-off-by: Łukasz 'sil2100' Zemczak <lukasz.zemczak@chainguard.dev>

--- a/glibc.yaml
+++ b/glibc.yaml
@@ -378,6 +378,7 @@ subpackages:
     dependencies:
       provider-priority: 10
       runtime:
+        - glibc=${{package.full-version}}
         - merged-sbin
         - wolfi-baselayout
         - wolfi-baselayout
@@ -487,6 +488,7 @@ subpackages:
             zic --help
     dependencies:
       runtime:
+        - glibc=${{package.full-version}}
         - merged-sbin
         - wolfi-baselayout
 
@@ -495,6 +497,7 @@ subpackages:
     dependencies:
       runtime:
         - bash
+        - glibc=${{package.full-version}}
         - merged-sbin
         - wolfi-baselayout
     pipeline:
@@ -539,6 +542,7 @@ subpackages:
             localedef --help
     dependencies:
       runtime:
+        - glibc=${{package.full-version}}
         - merged-sbin
         - wolfi-baselayout
 
@@ -561,6 +565,7 @@ subpackages:
             packages: $(basename ${{targets.contextdir}})
     dependencies:
       runtime:
+        - glibc=${{package.full-version}}
         - merged-sbin
         - wolfi-baselayout
 
@@ -577,6 +582,7 @@ subpackages:
             nscd --help
     dependencies:
       runtime:
+        - glibc=${{package.full-version}}
         - merged-sbin
         - wolfi-baselayout
 
@@ -636,6 +642,7 @@ subpackages:
             pcprofiledump --help
     dependencies:
       runtime:
+        - glibc=${{package.full-version}}
         - merged-sbin
         - wolfi-baselayout
 
@@ -656,6 +663,7 @@ subpackages:
             xtrace --help
     dependencies:
       runtime:
+        - glibc=${{package.full-version}}
         - merged-sbin
         - wolfi-baselayout
 
@@ -672,6 +680,7 @@ subpackages:
             sln --help
     dependencies:
       runtime:
+        - glibc=${{package.full-version}}
         - merged-sbin
         - wolfi-baselayout
 
@@ -682,6 +691,7 @@ subpackages:
       provides:
         - so:libcrypt.so.1=1
       runtime:
+        - glibc=${{package.full-version}}
         - libxcrypt
         - merged-sbin
         - wolfi-baselayout
