Update ceph.yaml to enable manager dashboard frontend and add documentation pipeline

--- a/ceph.yaml
+++ b/ceph.yaml
@@ -132,6 +132,7 @@ pipeline:
         -DWITH_SYSTEM_FMT=OFF \
         -DWITH_SYSTEM_LIBURING=ON \
         -DWITH_SYSTEM_NPM=ON \
+        -DWITH_MGR_DASHBOARD_FRONTEND=ON \
         -DWITH_SYSTEM_ROCKSDB=OFF \
         -DWITH_SYSTEM_ZSTD=ON \
         -DWITH_QATLIB=OFF \
@@ -155,8 +156,53 @@ subpackages:
     pipeline:
       - uses: split/dev
 
+  - name: ${{package.name}}-doc
+    pipeline:
+      - uses: split/manpages
+    description: ceph manpages
+    dependencies:
+      provides:
+        - ceph-doc=${{package.full-version}}
+    test:
+      pipeline:
+        - uses: test/docs
+
 test:
-  pipeline:
+  environment:
+    contents:
+      packages:
+        - sudo-rs
+        - py3.11-packaging
+        - py3.11-pyyaml
+        - systemd
+        - docker
+        - lvm2-dev
+  pipeline
+  # - name: "Test manager run"
+  #   uses: test/daemon-check-output
+  #   with:
+  #     setup: |
+  #       mkdir -p /tmp/k8s-webhook-server/serving-certs/
+  #       mkcert -install
+  #       mkcert -key-file /tmp/k8s-webhook-server/serving-certs/tls.key -cert-file /tmp/k8s-webhook-server/serving-certs/tls.crt localhost
+  #     start: /usr/bin/manager
+  #     timeout: 30
+  #     expected_output: |
+  #       starting manager
+  #       Starting webhook server
+  #       starting server
+  #       Starting workers
+  #     post: |
+  #       sleep 3
+  #       STATUS=$(curl -k -s -o /dev/null -w "%{http_code}" http://localhost:8081/healthz)
+  #       # Check if the status code is 200, if so exit 0, otherwise exit 1
+  #       if [ "$STATUS" -eq 200 ]; then
+  #           echo "Health check passed with status code 200"
+  #           exit 0
+  #       else
+  #           echo "Health check failed with status code $STATUS"
+  #           exit 1
+  #       fi:
     - name: Ensure version build
       runs: |
         ceph --version  | grep ${{package.version}}
@@ -170,7 +216,18 @@ test:
         radosgw --version | grep ${{package.version}}
         radosgw-admin --version | grep ${{package.version}}
         rbd --version | grep ${{package.version}}
-    - runs: cephadm bootstrap --orphan-initial-daemons
+    - uses: test/kwok/cluster
+    - name: Fetch the testdata from the source repo
+      runs: git clone --depth=1 https://github.com/rook/rook.git
+    - name: Install CRDs
+      working-directory: rook/deploy/examples
+      runs: |
+        kubectl wait --for=condition=Ready nodes --all
+        kubectl apply --server-side=true -f crds.yaml -f common.yaml -f operator.yaml
+        kubectl apply --server-side=true -f cluster.yaml
+
+        # wait for all CRDs to be created
+        sleep 3
 
 update:
   enabled: true
