zig: fix `build docs`

--- a/zig.yaml
+++ b/zig.yaml
@@ -51,10 +51,8 @@ pipeline:
       # Workaround for missing zig binary in the build dir.
       DESTDIR="build/.dest" cmake --install build
 
-      cd build
-      ./.dest/usr/bin/zig build docs
+      (cd build/.dest/usr/bin && ./zig build docs)
 
-      cd ..
       DESTDIR="${{targets.destdir}}" cmake --install build
 
   - uses: strip
