add post block in there as well
sus because docker runner is not playing well with this.

Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/prometheus-alertmanager.yaml
+++ b/prometheus-alertmanager.yaml
@@ -66,6 +66,7 @@ subpackages:
         contents:
           packages:
             - ${{package.name}}
+            - curl
       pipeline:
         - runs: |
             /opt/bitnami/alertmanager/bin/alertmanager --version | grep ${{package.version}}
@@ -80,6 +81,11 @@ subpackages:
             expected_output: |
               Starting Alertmanager
               Build context
+            post: |
+              #!/bin/sh -e
+              # Test health endpoints
+              curl -s http://127.0.0.1:9093/-/ready | grep -i OK
+              curl -s http://127.0.0.1:9093/-/healthy | grep -i OK
 
 update:
   enabled: true
