Add the pkgconf test to grpc-1.67 (#43887)

--- a/grpc-1.67.yaml
+++ b/grpc-1.67.yaml
@@ -152,11 +152,13 @@ subpackages:
     dependencies:
       runtime:
         - ${{package.name}}
+        - opentelemetry-cpp-dev
       provides:
         - grpc-dev=${{package.full-version}}
     description: grpc dev
     test:
       pipeline:
+        - uses: test/pkgconf
         - uses: test/tw/ldd-check
           with:
             packages: ${{subpkg.name}}
