jitsucom-bulker: apply oauth2 bump to each required module
We can't do this within the subpackage because not all subpackages
use the package.

--- a/jitsucom-bulker.yaml
+++ b/jitsucom-bulker.yaml
@@ -24,6 +24,25 @@ pipeline:
     with:
       deps: |-
         golang.org/x/oauth2@v0.27.0
+      modroot: ./bulkerapp
+
+  - uses: go/bump
+    with:
+      deps: |-
+        golang.org/x/oauth2@v0.27.0
+      modroot: ./ingest
+
+  - uses: go/bump
+    with:
+      deps: |-
+        golang.org/x/oauth2@v0.27.0
+      modroot: ./sync-controller
+
+  - uses: go/bump
+    with:
+      deps: |-
+        golang.org/x/oauth2@v0.27.0
+      modroot: ./ingress-manager
 
 data:
   - name: commands
