add a  test alert
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/prometheus-alertmanager.yaml
+++ b/prometheus-alertmanager.yaml
@@ -86,6 +86,9 @@ subpackages:
               # Test health endpoints
               curl -s http://127.0.0.1:9093/-/ready | grep -i OK
               curl -s http://127.0.0.1:9093/-/healthy | grep -i OK
+              # Create a test alert
+              curl -XPOST -H "Content-Type: application/json" -d '[{"labels":{"alertname":"TestAlertFromMelangeTest","severity":"critical"}}]' http://127.0.0.1:9093/api/v2/alerts
+
 
 update:
   enabled: true
