update spark-3.5.yaml: remove procps from subpackages and add to runtime dependencies

--- a/spark-3.5.yaml
+++ b/spark-3.5.yaml
@@ -74,7 +74,6 @@ subpackages:
         - net-tools
         - logrotate
         - linux-pam
-        - procps
         - libnss
       provides:
         - spark=${{package.full-version}}
@@ -258,6 +257,8 @@ subpackages:
     dependencies:
       runtime:
         - openjdk-${{range.key}}-default-jvm
+        - busybox
+        - procps
     pipeline:
       - runs: |
           git stash
