update spark-3.5.yaml: add missing runtime dependencies for improved functionality

--- a/spark-3.5.yaml
+++ b/spark-3.5.yaml
@@ -257,8 +257,16 @@ subpackages:
     dependencies:
       runtime:
         - openjdk-${{range.key}}-default-jvm
+        - bash
         - busybox
         - procps
+        - posix-libc-utils
+        - tini
+        - tini-compat
+        - net-tools
+        - logrotate
+        - linux-pam
+        - libnss
     pipeline:
       - runs: |
           git stash
